--- a/Black_hole_simulator.html
+++ b/Black_hole_simulator.html
@@ -24,7 +24,7 @@
 
 <body style="background-color: #000000;">
     <canvas id="Canvas" style="border:1px solid #ffffff;"></canvas>
-    
+
     
     <div class="overlay">    
         <!--<p>This is a paragraph overlay on the canvas!</p>-->
@@ -34,6 +34,8 @@
     <script src="files/canvas_lib.js"></script>
     <script src="files/blackhole.js"></script>
     <script src="files/satellite.js"></script>
+    <script src="files/loadimage.js"></script>
+    <script src="files/ImageSatellite.js"></script>
     <script src="files/main.js"></script>
 </body>
 </html>
