Images, titles, mass

--- a/Black_hole_simulator.html
+++ b/Black_hole_simulator.html
@@ -34,6 +34,8 @@
     <script src="files/canvas_lib.js"></script>
     <script src="files/blackhole.js"></script>
     <script src="files/satellite.js"></script>
+    <script src="files/loadimage.js"></script>
+    <script src="files/ImageSatellite.js"></script>
     <script src="files/main.js"></script>
 </body>
 </html>
